--- a/index.html
+++ b/index.html
@@ -13,15 +13,17 @@
     
     <nav>
       <div class="box">
-        <p>arik</p>
+        <div class="headingText">
+          <p>arik.</p>
+        </div>
         <div class="pc-nav">
           <p>SERVICES</p>
           <P>WORK</P>
           <P>ABOUT</P>
           <P>BLOG</P>
         </div>
-        <h4>LET'S TALK</h4>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="40" height="30" fill="currentColor"><path d="M3 4H21V6H3V4ZM3 11H21V13H3V11ZM3 18H21V20H3V18Z"></path></svg>
+        <div class="headerInformation"><h4>LET'S TALK</h4>
+          <svg class="hamburgerMenu" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="40" height="30" fill="currentColor"><path d="M3 4H21V6H3V4ZM3 11H21V13H3V11ZM3 18H21V20H3V18Z"></path></svg></div>
       </div>
       <div class="box2">
 
